@@ -1,0 +1,7 @@
+
+from chimera.core.location import Location
+
+class TestLocation:
+
+    pass
+
