@@ -1,3 +1,8 @@
+2007-07-04  P. Henrique Silva  <henrique@astro.ufsc.br>
+
+	* tests/chimera/*: New unit tests starting right now (currently
+	only some modules).
+
 2007-04-24  P. Henrique Silva  <henrique@astro.ufsc.br>
 
 	* src/scripts/chimera: Use /usr/bin/env to call python (ensure use
